[gd_scene load_steps=6 format=3 uid="uid://dwvu5ydu8jb1u"]

[ext_resource type="Script" path="res://scenes/walker.gd" id="1_hq78r"]
[ext_resource type="PackedScene" uid="uid://ds4026u0366rt" path="res://scenes/Player/player_animations_treadmill.tscn" id="2_8bg33"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p2w4y"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oects"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3nqk6"]

[node name="Walker" type="CharacterBody3D"]
script = ExtResource("1_hq78r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_p2w4y")

[node name="BumpArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BumpArea"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
shape = SubResource("SphereShape3D_oects")

[node name="animations-treadmill" parent="." instance=ExtResource("2_8bg33")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="animations-treadmill/control_rig" index="0"]
bones/0/position = Vector3(-0.00179811, 0.884761, -0.0380111)
bones/0/rotation = Quaternion(0.114877, 0.0139727, -0.00161597, 0.99328)
bones/4/rotation = Quaternion(0.516314, -0.0843637, -0.00504984, 0.852219)
bones/5/rotation = Quaternion(-0.388491, 0.0361787, 0.00449348, 0.920731)
bones/7/rotation = Quaternion(-0.609043, 0.0688743, -0.155246, 0.77474)
bones/8/rotation = Quaternion(3.1954e-07, -0.020916, -2.58019e-08, 0.999781)
bones/32/rotation = Quaternion(-0.604674, -0.0993096, 0.0500995, 0.788668)
bones/33/rotation = Quaternion(2.41168e-07, -0.0197622, 1.34281e-07, 0.999805)
bones/56/rotation = Quaternion(6.31843e-05, 0.094658, 0.995442, -0.0116571)
bones/57/rotation = Quaternion(-4.49466e-09, -0.0857588, 9.36266e-09, 0.996316)
bones/58/rotation = Quaternion(-0.0385928, 0.0102107, 0.0100803, 0.999152)
bones/60/rotation = Quaternion(0.54903, -0.00640802, -0.0238101, 0.835439)
bones/62/rotation = Quaternion(-0.0151483, 0.135889, 0.990472, 0.0164074)
bones/63/rotation = Quaternion(-4.65106e-10, 0.0979774, -4.67781e-09, 0.995189)
bones/66/rotation = Quaternion(0.521284, 0.00682396, 0.0229539, 0.853047)

[node name="ActivationArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActivationArea"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("SphereShape3D_3nqk6")

[connection signal="body_entered" from="BumpArea" to="." method="_on_bump_area_body_entered"]
[connection signal="body_entered" from="ActivationArea" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_activation_area_body_exited"]

[editable path="animations-treadmill"]
